--- a/MyShopAug/MyShopAug.Core/MyShopAug.Core.csproj
+++ b/MyShopAug/MyShopAug.Core/MyShopAug.Core.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\ProductCategory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\ProductManagerViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Content\bootstrap-grid.css.map" />
