--- a/MyShopAug/MyShopAug.Core/packages.config
+++ b/MyShopAug/MyShopAug.Core/packages.config
@@ -3,4 +3,5 @@
   <package id="bootstrap" version="4.5.2" targetFramework="net472" />
   <package id="jQuery" version="3.0.0" targetFramework="net472" />
   <package id="popper.js" version="1.16.1" targetFramework="net472" />
+  <package id="System.Runtime" version="4.3.1" targetFramework="net472" />
 </packages>
