--- a/MyShopAug/MyShopAug.UI.Tests/packages.config
+++ b/MyShopAug/MyShopAug.UI.Tests/packages.config
@@ -10,4 +10,9 @@
   <package id="MSTest.TestFramework" version="1.2.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="popper.js" version="1.16.1" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
+  <package id="Unity.Abstractions" version="5.11.1" targetFramework="net472" />
+  <package id="Unity.Container" version="5.11.1" targetFramework="net472" />
+  <package id="WebActivatorEx" version="2.2.0" targetFramework="net472" />
 </packages>
